[project]
name = "agentloop-demo-app"
version = "0.2.0"
description = "Live demo for AgentLoop — guided 3-step loop showing how human corrections become reusable memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    # AgentLoop SDKs — Phase 2 floors (default URL is api.getagentloop.io)
    "agentloop-py>=0.2.0",
    "agentloop-py-openai>=0.3.0",
    # LLM provider
    "openai>=1.50.0",
]

[tool.uv]
package = false
